<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CharacterActivity"
        android:id="@+id/character_main_view">
        <android.support.v7.widget.Toolbar
        android:id="@+id/my_char_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MarvelTheme"
        />
        <ImageView
            android:id="@+id/character_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/portrait_uncanny"
            android:contentDescription="@string/cd_image_of_the_character"
            app:layout_constraintEnd_toEndOf="@id/my_char_toolbar"
            app:layout_constraintStart_toStartOf="@id/my_char_toolbar"
            app:layout_constraintTop_toBottomOf="@id/my_char_toolbar"
            ><requestFocus/></ImageView>
        <ProgressBar
            android:id="@+id/character_profile_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/character_profile"
            app:layout_constraintStart_toStartOf="@+id/character_profile"
            app:layout_constraintTop_toTopOf="@+id/character_profile"
            app:layout_constraintBottom_toBottomOf="@+id/character_profile"/>
        <TextView
            android:id="@+id/character_name"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/character_name_loading"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_profile" />

        <TextView
            android:id="@+id/character_description"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_name" />
        <ProgressBar
            android:id="@+id/character_comic_list_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/character_description"
            app:layout_constraintEnd_toEndOf="@id/character_description"
            app:layout_constraintTop_toBottomOf="@id/character_description"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_description">
        <android.support.v7.widget.RecyclerView

            android:id="@+id/comics_list"
            android:layout_width="360dp"
            android:layout_height="400dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            />
        </ScrollView>
    <LinearLayout
        android:id="@+id/character_context_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="gone">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favorites"
        android:clickable="true"
        android:id="@+id/add_character_favorites"
        style="@style/contextMenu" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        android:src="@drawable/bookmark_plus_outline"
        android:contentDescription="@string/cd_context_menu_add_to_or_remove_from_favorites"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>